test/tests/compiler/9_functions/invalid_parse/var_init_in_param_list.plx
# Variable initializers aren't permitted in parameter lists
pub fn bad_params(a: i32 = 3) {
    return 1
}

pub fn main(none) i32 {
    return 0
}
